initial config for Docker devcontainer

--- a/openttd.cfg
+++ b/openttd.cfg
@@ -1,6 +1,6 @@
 
 [misc]
-display_opt = SHOW_TOWN_NAMES|SHOW_STATION_NAMES|SHOW_SIGNS|FULL_ANIMATION|FULL_DETAIL|WAYPOINTS
+display_opt = SHOW_TOWN_NAMES|SHOW_STATION_NAMES|SHOW_SIGNS|FULL_DETAIL|WAYPOINTS
 news_ticker_sound = true
 fullscreen = false
 graphicsset = "OpenGFX"
@@ -275,21 +275,21 @@ suffix = " credits"
 [newgrf-static]
 
 [news_display]
-arrival_player = off
-arrival_other = off
-accident = off
-company_info = off
-open = off
-close = off
-economy = off
-production_player = off
-production_other = off
-production_nobody = off
-advice = off
-new_vehicles = off
-acceptance = off
-subsidies = off
-general = off
+arrival_player = full
+arrival_other = full
+accident = full
+company_info = full
+open = full
+close = full
+economy = full
+production_player = full
+production_other = full
+production_nobody = full
+advice = full
+new_vehicles = full
+acceptance = full
+subsidies = full
+general = full
 
 [ai_players]
 none = start_date=730
